--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -1,26 +1,27 @@
 /*Basic style*/
+@import 'variables';
 
 body {
-  font-family: 'Roboto', sans-serif;
-  background: #fff
+	font-family: 'Roboto', sans-serif;
+	background: $light-gray;
 }
 
 .container {
-  @include min-max(320px, 100%);
+	@include min-max(320px, 100%);
 }
 
 .wrap {
-  @include min-max(320px, 1180px);
+	@include min-max(320px, 1180px);
 }
 
 p,
 a,
 button {
-  color: #000;
+	color: $black;
 }
 
 img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+	display: block;
+	max-width: 100%;
+	height: auto;
 }
