--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ img {
 
 .intro-analytics {
   padding-top: 50px;
+  position: relative;
 }
 .intro-analytics::after {
   content: "";
@@ -111,7 +112,7 @@ img {
   z-index: -1;
   left: 0;
   right: 0;
-  bottom: -25px;
+  bottom: -17px;
   width: 100%;
   height: 100%;
   background: #ef2a82;
@@ -149,6 +150,8 @@ img {
 }
 .header__menu a {
   text-decoration: none;
+  color: #8794ba;
+  cursor: pointer;
 }
 
 .header__btns {
@@ -250,6 +253,80 @@ img {
   border-radius: 30px;
   box-shadow: 0px 18px 50px -15px rgba(25, 42, 89, 0.2);
   z-index: -1;
+}
+
+.main-futures {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.main-futures__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  color: #000;
+  margin-bottom: 30px;
+}
+.main-futures__text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: #8794ba;
+  margin-bottom: 70px;
+  width: 1060px;
+  height: 60px;
+}
+.main-futures__advantages {
+  display: flex;
+  justify-content: space-between;
+}
+.main-futures__advantage-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 366px;
+}
+.main-futures img {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 25px;
+}
+.main-futures h3 {
+  font-weight: 700;
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+.main-futures p {
+  color: #8794ba;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.roadmap__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 120px;
+}
+.roadmap__description {
+  max-width: 480px;
+}
+.roadmap__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 120%;
+  color: #000;
+  margin-bottom: 30px;
+}
+.roadmap__text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: #8794ba;
 }
 
 /*# sourceMappingURL=style.css.map */
