--- a/scss/blocks/intro.scss
+++ b/scss/blocks/intro.scss
@@ -3,6 +3,7 @@
 
 .intro-analytics {
 	padding-top: 50px;
+	position: relative;
 
 	&::after {
 		content: '';
@@ -24,7 +25,7 @@
 		z-index: -1;
 		left: 0;
 		right: 0;
-		bottom: -25px;
+		bottom: -17px;
 		width: 100%;
 		height: 100%;
 		background: $pink;
@@ -69,6 +70,8 @@
 
 	a {
 		text-decoration: none;
+		color: $gray;
+		cursor: pointer;
 	}
 }
 
