--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,3 +9,5 @@
 @import 'blocks/intro.scss';
 @import 'blocks/future.scss';
 @import 'blocks/roadmap.scss';
+@import 'blocks/ratesItem.scss';
+@import 'blocks/footer.scss';
