--- a/scss/blocks/roadmap.scss
+++ b/scss/blocks/roadmap.scss
@@ -7,6 +7,10 @@
 		justify-content: space-between;
 		align-items: center;
 		margin-bottom: 120px;
+
+		&--right {
+			flex-direction: row-reverse;
+		}
 	}
 
 	&__description {
@@ -26,5 +30,12 @@
 		font-size: 18px;
 		line-height: 150%;
 		color: $gray;
+	}
+
+	&__picture {
+		max-width: 600px;
+		max-height: auto;
+		box-shadow: 0px 18px 50px -15px #192a5933;
+		border-radius: 30px;
 	}
 }
