--- a/scss/blocks/intro.scss
+++ b/scss/blocks/intro.scss
@@ -4,6 +4,7 @@
 .intro-analytics {
 	padding-top: 50px;
 	position: relative;
+	// overflow: hidden;
 
 	&::after {
 		content: '';
@@ -35,6 +36,10 @@
 .header {
 	display: flex;
 	align-items: center;
+
+	.header-menu-btn {
+		display: none;
+	}
 
 	nav {
 		flex-grow: 1;
@@ -98,7 +103,7 @@
 	}
 
 	&__title {
-		z-index: 1;
+		// z-index: 1;
 		position: relative;
 		font-weight: 700;
 		font-size: 50px;
@@ -130,7 +135,7 @@
 	}
 
 	&__text {
-		z-index: 1;
+		// z-index: 1;
 		position: relative;
 		font-weight: 400;
 		font-size: 18px;
@@ -140,7 +145,13 @@
 	}
 
 	&__btn {
+		cursor: pointer;
 		@include btn(transparent, $pink, 68px, #fff, 16px, 15px, 80px);
+		transition: all 0.3s ease;
+
+		&:hover {
+			@include btn(transparent, #cf196b, 68px, #fff, 16px, 15px, 80px);
+		}
 	}
 
 	&__pictures {
@@ -158,12 +169,206 @@
 			position: absolute;
 			top: -80px;
 			left: 80px;
-			background: url('../../assets/img/dashboard_big_new.png') no-repeat;
+			background: url('../../assets/img/dashboard-big.png') no-repeat;
 			width: 800px;
 			height: 550px;
+			// max-width: 100%;
 			border-radius: 30px;
 			box-shadow: 0px 18px 50px -15px rgba(25, 42, 89, 0.2);
 			z-index: -1;
+		}
+	}
+}
+
+@media screen and (max-width: 1200px) {
+	.intro-analytics {
+		&::after,
+		&::before {
+			clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+		}
+	}
+
+	.wrap-padding {
+		padding: 0 15px;
+	}
+
+	.header {
+		justify-content: space-between;
+
+		&__logo {
+			flex-grow: 1;
+		}
+
+		.header-menu-btn {
+			display: block;
+			position: relative;
+
+			input {
+				cursor: pointer;
+				position: relative;
+				visibility: hidden;
+				width: 24px;
+				height: 24px;
+
+				&:checked {
+					~ .header__menu--side {
+						opacity: 1;
+						transform: translateX(0%);
+					}
+				}
+
+				&::before {
+					content: '';
+					position: absolute;
+					visibility: visible;
+					width: 24px;
+					height: 24px;
+					top: 0;
+					left: 0;
+					background: url('../../assets/icons/menu-icon.svg') no-repeat;
+				}
+			}
+		}
+
+		&__menu--side {
+			z-index: 1;
+			position: absolute;
+			top: 40px;
+			right: -15px;
+			background: #1e3681;
+			padding: 15px 20px;
+			border-radius: 5px;
+			transform: translateX(100%);
+			opacity: 0;
+			transition: transform, opacity 0.3s ease;
+
+			ul {
+				flex-direction: column;
+
+				li {
+					margin-bottom: 30px;
+
+					&:last-child {
+						margin: 0;
+					}
+				}
+			}
+		}
+
+		&__menu--adaptive {
+			display: none;
+		}
+
+		&__btn--adaptive {
+			display: none;
+		}
+	}
+
+	.dashboard {
+		padding-top: 80px;
+		flex-direction: column;
+		// flex-wrap: wrap;
+
+		&__info {
+			max-width: 100%;
+			margin-right: 0;
+		}
+
+		&__title {
+			text-align: center;
+
+			&::before {
+				display: none;
+			}
+
+			&::after {
+				display: none;
+			}
+		}
+
+		&__text {
+			text-align: center;
+		}
+
+		&__btn {
+			margin: 0 auto;
+			display: block;
+		}
+
+		&__pictures {
+			margin: 0 auto;
+
+			&::before {
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -10%);
+				width: 540px;
+				height: 369px;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 576px) {
+	.intro-analytics {
+		&::after,
+		&::before {
+			clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+		}
+		// .wrap-padding {
+		// 	padding: 0 15px;
+		// }
+
+		.header {
+			flex-direction: column;
+			gap: 20px;
+
+			&__logo {
+				margin-right: 0;
+			}
+
+			.header-menu-btn {
+				input {
+					// transition: transform, opacity 0.8s ease;
+
+					&:checked {
+						~ .header__menu--side {
+							transform: translateX(30%);
+						}
+					}
+				}
+			}
+
+			&__menu--side {
+				z-index: 1;
+				position: absolute;
+				top: 40px;
+				right: -15px;
+				background: #1e3681;
+				padding: 15px 20px;
+				border-radius: 5px;
+				transform: translateX(30%);
+				opacity: 0;
+				transition: transform, opacity 0.3s ease;
+			}
+		}
+	}
+
+	.dashboard {
+		padding-top: 40px;
+		padding-bottom: 150px;
+
+		&__title {
+			font-size: 36px;
+		}
+
+		&__text {
+			font-size: 16px;
+		}
+		&__pictures {
+			&::before {
+				display: none;
+			}
 		}
 	}
 }
