--- a/scss/blocks/roadmap.scss
+++ b/scss/blocks/roadmap.scss
@@ -39,3 +39,30 @@
 		border-radius: 30px;
 	}
 }
+
+@media screen and (max-width: 1200px) {
+	.roadmap {
+		&__item {
+			gap: 15px;
+			text-align: center;
+		}
+
+		&__description {
+			max-width: 50%;
+		}
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.roadmap {
+		&__item {
+			flex-direction: column;
+			margin-bottom: 80px;
+			text-align: center;
+		}
+
+		&__description {
+			max-width: 75%;
+		}
+	}
+}
